# feedback-leptos-dev

./: .env  .gitignore  Cargo.toml  a.txt  b.txt  c.txt  leptosfmt.toml  rust-analyzer.json  rustfmt.toml  tailwind.config.js
ls_entity/: Cargo.toml
ls_entity/src/: post.rs  user.rs
ls_entity/src/profile/: anniversary.rs  biography.rs  gender.rs  location.rs  mod.rs  orientation.rs  pronoun.rs  relationship.rs  role.rs
ls_service/: Cargo.toml
ls_service/src/: lib.rs
ls_service/src/mutation/: mod.rs  post.rs  user.rs
ls_service/src/query/: post.rs  user.rs
ls_service/src/utils/: api_response.rs  auth_middlewares.rs  jwt.rs  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240415_000001_create_post_table.rs  m20240416_000001_create_user_table.rs  main.rs
migration/src/profile/: m20240423_000001_create_anniversary_table.rs  m20240424_000001_create_location_table.rs  m20240425_000001_create_pronoun_table.rs  m20240426_000001_create_role_table.rs  m20240427_000001_create_orientation_table.rs  m20240428_000001_create_gender_table.rs  m20240429_000001_create_biography_table.rs  m20240430_000001_create_relationship_table.rs  mod.rs
src/: app.rs  error.rs  lib.rs  main.rs
src/app/: dark_mode.rs  jwt.rs  mod.rs  navbar.rs  sidebar.rs  state.rs
src/app/pages/: auth.rs  front.rs  home.rs  mod.rs  test.rs
src/app/pages/dash/: dashboard.rs  mod.rs  modal.rs
src/server_fns/: mod.rs
src/server_fns/user/: authenticate.rs  current.rs  login.rs  logout.rs  mod.rs  register.rs
style/: input.css  output.css
tw-presets/: midnight.js
(+3 files in other folders)
